--- a/NoteManagement/package.json
+++ b/NoteManagement/package.json
@@ -10,18 +10,25 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/drawer": "^6.6.15",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
-    "expo": "~51.0.11",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "^2.16.2",
-    "react-native-reanimated": "^3.12.0",
-    "react-native-safe-area-context": "^4.10.4",
-    "react-native-screens": "^3.31.1"
+        "@react-navigation/bottom-tabs": "^6.5.20",
+        "@react-navigation/drawer": "^6.6.15",
+        "@react-navigation/native": "^6.1.17",
+        "@react-navigation/stack": "^6.3.29",
+        "@react-navigation/native-stack": "^6.9.26",
+        "date-fns": "^3.6.0",
+        "expo": "~51.0.11",
+        "expo-status-bar": "~1.12.1",
+        "react": "18.2.0",
+        "react-native": "0.74.2",
+        "react-native-elements": "^3.4.3",
+        "react-native-gesture-handler": "^2.16.2",
+        "react-native-reanimated": "~3.10.1",
+        "react-native-safe-area-context": "4.10.1",
+        "react-native-screens": "3.31.1",
+        "react-native-vector-icons": "^10.1.0"
+
+
+
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
